2002-06-13  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* src/commands.c (cmd_cell_range_is_locked_effective) : new
	(cmd_analysis_tool_redo) : check whether output region is locked.

2002-06-13  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* src/workbook-control-gui.c (workbook_close_if_user_permits) :
	show "All" buttons only if multiple workbooks are open.
	
2002-06-13  Jody Goldberg <jody@gnome.org>

 	http://bugzilla.gnome.org/show_bug.cgi?id=85181
	* src/workbook-edit.c (wbcg_edit_start) : protect against recursion
	  before testing for protection, we may already have a dialog up.

2002-06-12  Rodrigo Moya <rodrigo@gnome-db.org>

	* src/file.c:
	* src/plugin-service.c: s/IS_GSF/GSF_IS

2002-06-11  Jon K Hellan  <hellan@acm.org>

	* src/file.c: Include unistd.h to declare unlink, close and read.

	* src/main-application.c: Inlude bonobo-main.h to declare
	bonobo_activate.

2002-06-10  Jon K Hellan  <hellan@acm.org>

	* src/file.c: Fix up includes to make the bonobo version build.

	* src/plugin-service.c: Ditto.

	* src/gui-file.c (ask_for_file_saver, gui_file_save_to_stream):
	Disable for now to make the bonobo version build.

	* src/workbook-control-gui.c (cb_file_send): Ditto.

2002-06-07  Jody Goldberg <jody@gnome.org>

	* src/workbook-view.c (wb_view_open) : convert to libgsf.

	* src/stf.c (stf_open_and_read) : convert to libgsf.
	(stf_preparse) : ditto.
	(stf_read_workbook) : ditto.
	(stf_read_workbook_auto_csvtab) : ditto.
	(stf_read_default_probe) : ditto.

	* src/stf-parse.c (stf_parse_is_valid_data) : actually disable the
	  wide char support if it is not available.

	* src/gutils.c (gnm_extension_pointer) : copied from libgnome to
	  decrease our dependence on it.

	* src/gui-util.c (gnumeric_editable_enters) : modernize a bit.

	* src/gnumeric-simple-canvas.c (gnm_simple_canvas_grab) : suppress
	  warning.

	* src/file.c (gnum_file_opener_probe_real) : Use libgsf.
	(gnum_file_opener_open_real) : ditto.
	(gnum_file_opener_probe) : ditto.